--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-markdown: kramdown
-theme: minima
+#markdown: kramdown
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
